--- a/aoc2022.cabal
+++ b/aoc2022.cabal
@@ -93,6 +93,10 @@ executable aoc11
   import:         exec
   hs-source-dirs: aoc11
   main-is:        Main.hs
+  build-depends:
+    , containers  ^>=0.6
+    , mtl         ^>=2.3
+    , split       ^>=0.2
 
 executable aoc12
   import:         exec
