--- a/aoc2022.cabal
+++ b/aoc2022.cabal
@@ -102,6 +102,9 @@ executable aoc12
   import:         exec
   hs-source-dirs: aoc12
   main-is:        Main.hs
+  build-depends:
+    , containers  ^>=0.6
+    , mtl         ^>=2.3
 
 executable aoc13
   import:         exec
