--- a/aoc2022.cabal
+++ b/aoc2022.cabal
@@ -116,6 +116,9 @@ executable aoc14
   import:         exec
   hs-source-dirs: aoc14
   main-is:        Main.hs
+  build-depends:
+    , containers  ^>=0.6
+    , megaparsec  ^>=9.2.0
 
 executable aoc15
   import:         exec
