--- a/aoc2022.cabal
+++ b/aoc2022.cabal
@@ -138,6 +138,9 @@ executable aoc17
   import:         exec
   hs-source-dirs: aoc17
   main-is:        Main.hs
+  build-depends:
+    , containers  ^>=0.6
+    , mtl         ^>=2.2
 
 executable aoc18
   import:         exec
