--- a/aoc2022.cabal
+++ b/aoc2022.cabal
@@ -146,6 +146,7 @@ executable aoc18
   import:         exec
   hs-source-dirs: aoc18
   main-is:        Main.hs
+  build-depends:  containers ^>=0.6
 
 executable aoc19
   import:         exec
